# Atlas-git

./: .cvsignore  .gitignore  .hgignore  AUTHORS  CMakeLists.txt  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  acconfig.h  acinclude.m4  atlas.iss  atlas.sln  autogen.sh  config.h.cmake  configure  configure.ac  configure.in
Atlas/: atlas.vcproj
CMakeModules/: FindPLIB.cmake
GetMap/: GetMap.vcproj
Map/: Map.vcproj
MapPS/: MapPS.vcproj
projects/msvc/: Atlas.dsp  Atlas.vcproj  GetMap.dsp  GetMap.vcproj  Map.dsp  Map.vcproj  README.map.txt  README.msvc.txt  README.win_ulib.txt  atlas.dsw  atlas.sln  atsetup.bat  cleanup.bat  clrsetup.bat  config.h  delmaps.bat  delsln.bat  deltest.bat  dosetup.bat  makediff.bat  runatlas.bat  rungetmap.bat  runmap.bat  setdefault.bat  testmap.bat  update.mak  win_ulib.dsp  win_ulib.vcproj  zipall.bat  zipsrc.bat
projects/msvc/winsrc/: MapEXT.cxx  MapEXT.hxx  asprintf.cxx  asprintf.h  getopt.cxx  getopt.h  sg_ext_funcs.cxx  sg_ext_funcs.hxx  strsep.cxx  strsep.h  win_utils.cxx  win_utils.h  win_versions.h
slimgear/: Makefile.am  configure.ac
slimgear/simgear/: Makefile.am  simgear_config.h.cmake  simgear_config.h.in
slimgear/simgear/bucket/: Makefile.am
slimgear/simgear/debug/: Makefile.am  logstream.cxx
slimgear/simgear/io/: Makefile.am  sg_binobj.cxx  sg_binobj.hxx
slimgear/simgear/magvar/: Makefile.am
slimgear/simgear/math/: Makefile.am
slimgear/simgear/misc/: Makefile.am  sg_path.cxx  strutils.cxx
slimgear/simgear/package/: Makefile.am
slimgear/simgear/serial/: Makefile.am
slimgear/simgear/structure/: Makefile.am
slimgear/simgear/threads/: Makefile.am
slimgear/simgear/timing/: Makefile.am
src/: .cvsignore  AirportsOverlay.cxx  AirportsOverlay.hxx  AirwaysOverlay.cxx  AirwaysOverlay.hxx  Atlas.cxx  AtlasBaseWindow.cxx  AtlasBaseWindow.hxx  AtlasController.cxx  AtlasController.hxx  AtlasPalette  AtlasWindow.cxx  AtlasWindow.hxx  Background.cxx  Background.hxx  Bucket.cxx  Bucket.hxx  Cache.cxx  Cache.hxx  CrosshairsOverlay.cxx  CrosshairsOverlay.hxx  Culler.cxx  Culler.hxx  FixesOverlay.cxx  FixesOverlay.hxx  FlightTrack.cxx  FlightTrack.hxx  FlightTracksOverlay.cxx  FlightTracksOverlay.hxx  GLUTWindow.cxx  GLUTWindow.hxx  Geodesy.hxx  Geographics.cxx  Geographics.hxx  GetMap.cxx  Globals.cxx  Globals.hxx  Graphs.cxx  Graphs.hxx  Image.cxx  (+66 more)
src/data/: Makefile.am
src/data/Fonts/: Helvetica-Bold.100.txf  Helvetica.100.txf  Makefile.am
src/data/Palettes/: GMT_globe.ap  Makefile.am  NGDC.ap  cd-a.ap  default.ap  wiki-1.03.ap
