noinst_LTLIBRARIES = libsgio.la

libsgio_la_SOURCES = \
	iochannel.cxx iochannel.hxx \
	lowlevel.cxx lowlevel.hxx \
	raw_socket.cxx raw_socket.hxx \
	sg_binobj.cxx sg_binobj.hxx \
	sg_file.cxx sg_file.hxx \
	sg_serial.cxx sg_serial.hxx \
	sg_socket.cxx sg_socket.hxx \
	sg_socket_udp.cxx sg_socket_udp.hxx

libsgio_la_CPPFLAGS = -I$(top_srcdir)
